/*
 * $Id: ChangeLog,v 1.587 2003/01/05 23:36:11 horacioroldan Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-06 09:40 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * include/hbapirdd.h
    ! changed LPDBORDERCONDINFO, borrowed from Harbour.
    ! removed duplicated #defines (used from dbinfo.ch and dbstruct.ch)
  * source/rdd/dbcmd.c
  * source/rdd/dbf1.c
  * source/rdd/workarea.c
    ! several fixes borrowed from Harbour:
      - some strings operations optimized,
      - prevents some buffers overflow, unreleased memory
      - changed LPDBORDERCONDINFO to support WHILE clause for ADS RDD
      - COPY TO ... FIELDS ... is fixed - fields in the result dbf
        are in the same secuence as in the FIELDS clause.
  * include/hbrddntx.h
  * source/rdd/dbfntx/dbfntx1.c
    ! borrowed from Harbour:
      ! some fixes and index optimizations (single field key)
      + support for DBOI_ORDERCOUNT

2003-01-05 20:35 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * source/rdd/dbfcdx/dbfcdx1.c
    ! fixed numeric scope related bug, reported by Srdjan Dragojlovic
    ! allowing a memo to be used in seeks operations, reported by
      Marek Horodyski

2003-01-05 12:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/vm/fastitem.c
  * source/rtl/str.c
    * Renamed hb_retc[len]Static() to hb_retc[]lenAdoptStatic()

  * source/rtl/chrasc.c
    ! Fixed potential GPF.

2003-01-04 22:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    * Corrected typos related to hb_retcStatic() and hb_reclenStatic()

  * include/hbapiitm.h
  * source/vm/fastitem.c
    + Added hb_itemReturnCopy();
    + Added hb_retclenAdoptRawStatic()

  * source/rtl/chrasc.c
  * source/rtl/left.c
  * source/rtl/memofile.c
  * source/rtl/oemansi.c
  * source/rtl/setkey.c
  * source/rtl/str.c